<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:contentPadding="8dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow style="@style/filterTableRow">

            <TextView
                android:text="@string/filterLabel"
                android:textSize="18sp" />
        </TableRow>

        <TableRow style="@style/filterTableRowEnd">

            <TextView
                style="@style/filterTableRowLabel"
                android:gravity="start"
                android:text="@string/filterDoneLabel" />

            <com.yjy.problems.view.checkBox.CheckBox
                android:id="@+id/done"
                android:layout_width="24sp"
                android:layout_height="24sp"
                app:checkedColor="@color/colorAccent" />

            <Switch
                android:id="@+id/enableDoneFilter"
                style="@style/filterTableRowLabel" />
        </TableRow>

        <TableRow style="@style/filterTableRow">

            <TextView
                style="@style/filterTableRowLabel"
                android:gravity="start"
                android:text="@string/filterFromDateLabel" />

            <TextView
                android:id="@+id/fromDate"
                style="@style/filterTableRowLabel"
                android:background="@null"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/chooseFromDate"
                style="@style/filterTableRowLabel"
                android:text="@string/filterChooseFromDate"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </TableRow>

        <TableRow style="@style/filterTableRow">

            <TextView
                style="@style/filterTableRowLabel"
                android:gravity="start"
                android:text="@string/filterToDateLabel" />

            <TextView
                android:id="@+id/toDate"
                style="@style/filterTableRowLabel"
                android:background="@null"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/chooseToDate"
                style="@style/filterTableRowLabel"
                android:text="@string/filterChooseToDate"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <Switch
                android:id="@+id/enableDateFilter"
                style="@style/filterTableRowLabel" />
        </TableRow>

    </TableLayout>

</android.support.v7.widget.CardView>
